events timeline spacing correction

--- a/src/app/components/landing-page/card/card.component.scss
+++ b/src/app/components/landing-page/card/card.component.scss
@@ -70,18 +70,17 @@
 .read-all-news-explore-div {
 	display: flex;
 	justify-content: center;
+    align-items: center;
 }
 .read-all-news-explore {
-	display: flex;
-	justify-content: center;
-	margin-top: 1rem;
 	width: 300px;
 	border: 2px solid #00A3E0;
 	color: #00A3E0;
+	background-color: white;
 }
 
 .read-all-news-explore:hover{
-  color: white;
-  background-color: #00A3E0;
-  border: 2px solid #00A3E0;
+    color: white;
+	background-color: #00A3E0;
+	border: 2px solid #00A3E0;
 }
