--- a/src/app/components/landing-page/events-timeline/events-timeline.component.scss
+++ b/src/app/components/landing-page/events-timeline/events-timeline.component.scss
@@ -1,7 +1,3 @@
-.events-header {
-    margin: 3% 3%;
-}
-
 ::ng-deep{
     .p-timeline-event{
         width: 80vw;
@@ -61,6 +57,9 @@
                 @media (max-width: 1350px) {
                     display: flex;
                     flex-direction: column;
+                    .event-details-icon{
+                        padding-top: 10px;
+                    }
               }
             }
 
@@ -76,7 +75,6 @@
             .event-desc {
                 margin-top: 10px;
                 display: -webkit-box;
-                text-align: justify;
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
                 overflow: hidden;
@@ -92,6 +90,9 @@
                     margin-left: 10px;
                     font-size: 10px;
                 }
+            }
+            .view-event-container:hover{
+                cursor: pointer;
             }
         }
     }
